Minor update | Fixed spacing between divs based on device

--- a/src/global.css
+++ b/src/global.css
@@ -42,4 +42,8 @@ body {
   .mobile-resize-privacy {
     margin-top: 1.5em;
   }
+
+  .mobile-resize-featured {
+    margin-bottom: 2.15em;
+  }
 }
